tests/errors/poisoning/namespace-no-member.fn
---
Description: Member access on namespace where the member does not exist
Expected: FN3203
---

namespace Math
{
    type Vector2
    {
        init{}
    }
}

type Program
{
    static fn Main -> i32
    {
        var x = Math.NonExistent
        return 0
    }
}
